--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,18 @@ dependencies:
   firebase_storage: ^8.0.4
   image_picker: ^0.7.4
   intl: ^0.17.0
-  google_maps_flutter: ^2.0.4
-  location: ^4.1.1
+  splashscreen: ^1.2.0
+  flutter_launcher_name: ^0.0.1
+  flutter_launcher_icons: ^0.8.1
+
+flutter_launcher_name:
+  name: "CovidTimeLine"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon-map.ico"
+
 
 dev_dependencies:
   flutter_test:
